--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ VITE_GROQ_API_KEY=your_groq_api_key_here
 # Google Gemini API (Backup)
 # https://aistudio.google.com/app/apikey
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
+# Admin Credentials (optional - defaults will be used if not set)
+VITE_ADMIN_EMAIL=admin@aafs.com
+VITE_ADMIN_PASSWORD=admin123
